<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/navigation_generation">

    <fragment
        android:id="@+id/navigation_generation"
        android:name="com.aiart.stablediffusion.ui.GenerationFragment"
        android:label="@string/title_generation"
        tools:layout="@layout/fragment_generation" />

    <fragment
        android:id="@+id/navigation_gallery"
        android:name="com.aiart.stablediffusion.ui.GalleryFragment"
        android:label="@string/title_gallery"
        tools:layout="@layout/fragment_gallery">
        <action
            android:id="@+id/action_gallery_to_detail"
            app:destination="@id/navigation_image_detail"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>

    <fragment
        android:id="@+id/navigation_image_detail"
        android:name="com.aiart.stablediffusion.ui.ImageDetailFragment"
        android:label="@string/title_gallery"
        tools:layout="@layout/fragment_image_detail">
        <argument
            android:name="imageId"
            app:argType="long" />
    </fragment>
    
    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.aiart.stablediffusion.ui.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>